update soal quiz dan fix perhitungan skor

--- a/quiz.html
+++ b/quiz.html
@@ -125,19 +125,19 @@
         const questions = [
             { question: "Apa itu picky eater?", options: ["Anak yang suka pilih-pilih makanan", "Anak yang makan banyak", "Anak yang suka semua makanan"], answer: 1 },
             { question: "Ciri-ciri picky eater adalah", options: ["Mau mencoba semua makanan", "Hanya mau makan makanan tertentu", "Selalu makan tepat waktu"], answer: 2 },
-            { question: "Salah satu penyebab utama stunting adalah...", options: ["Kurangnya tidur", "Kurangnya gizi pada 1000 hari pertama kehidupan", "Terlalu banyak bermain gadget", "Anak terlalu aktif"], answer: 1 },
-            { question: "Apa yang dimaksud dengan Picky Eater?", options: ["Anak yang alergi makanan", "Anak yang sangat selektif memilih makanan", "Anak yang suka jajan", "Anak yang makan terlalu banyak"], answer: 1 },
-            { question: "Manakah tips yang efektif untuk mengatasi Picky Eater?", options: ["Memaksa anak menghabiskan makanan", "Menyajikan makanan dengan porsi kecil dan menarik", "Memberikan makanan cepat saji", "Membiarkan anak makan sambil menonton TV"], answer: 1 },
-            { question: "Mengapa peran orang tua sangat penting dalam pola makan anak?", options: ["Karena orang tua harus memasak setiap hari", "Karena orang tua adalah contoh yang ditiru anak", "Karena orang tua tahu semua jenis makanan", "Karena orang tua membayar makanan"], answer: 1 },
-            { question: "Apa salah satu pilar utama pencegahan stunting selain Pola Makan dan Pola Asuh?", options: ["Edukasi", "Sanitasi dan Akses Air Bersih", "Hiburan", "Transportasi"], answer: 1 },
-            { question: "Apa peran 'Pengaruh Prenatal' terhadap kebiasaan makan anak?", options: ["Ayah membeli makanan saat ibu hamil", "Pola makan ibu saat hamil memengaruhi pilihan makan anak", "Anak dapat makan sendiri sejak dalam kandungan", "Anak akan lahir dengan gigi lengkap"], answer: 1 },
-            { question: "Apa manfaat dari mengikutsertakan anak dalam proses memasak?", options: ["Anak bisa jadi koki", "Meningkatkan nafsu makan dan kemauan mencoba makanan baru", "Menghemat waktu memasak", "Mengurangi biaya belanja"], answer: 1 },
-            { question: "Apakah memaksa anak menghabiskan makanan merupakan langkah yang baik?", options: ["Ya, agar anak disiplin", "Tidak, karena dapat menciptakan trauma dan penolakan makanan", "Ya, hanya untuk sayuran", "Tergantung makanannya"], answer: 1 },
-            { question: "Apa yang dimaksud dengan '1000 Hari Pertama Kehidupan'?", options: ["Masa anak mulai sekolah", "Masa kritis dari konsepsi hingga usia 2 tahun", "Masa anak mulai berjalan", "Masa anak mulai berbicara"], answer: 1 },
-            { question: "Bagaimana memodifikasi makanan agar menarik?", options: ["Menyembunyikannya di makanan lain", "Memberikan saus instan", "Membuat bentuk lucu atau mencampurnya dalam puding", "Memberikannya dingin"], answer: 2 },
-            { question: "Mengapa ASI eksklusif penting?", options: ["Lebih murah", "Mengandung gizi lengkap & antibodi", "Untuk bonding saja", "Agar anak cepat tidur"], answer: 1 },
-            { question: "Apa fungsi Cek Status Gizi?", options: ["Mengetahui golongan darah", "Memantau perkembangan fisik & nutrisi anak", "Mengetahui hobi", "Mengetahui nilai rapor"], answer: 1 },
-            { question: "Jika anak selalu menolak makanan baru, apa langkah terbaik?", options: ["Membiarkannya", "Menghukum", "Memaksa", "Konsultasi ke dokter anak / ahli gizi"], answer: 3 }
+            { question: "Dampak buruk picky eater bisa menyebabkan", options: ["Nafsu makan meningkat", "Gizi anak tercukupi", "Kekurangan nutrisi"], answer: 3 },
+            { question: "Penyebab utama stunting adalah", options: ["Kekurangan gizi dalam jangka panjang", "Terlalu banyak tidur", "Sering bermain"], answer: 1 },
+            { question: "Nutrisi penting untuk mencegah stunting adalah", options: ["Gula", "Protein, zat besi, dan vitamin", "Pewarna makanan"], answer: 2 },
+            { question: "Picky eater seringkali berhubungan dengan masalah", options: ["Pertumbuhan", "Tidur", "Bermain"], answer: 1 },
+            { question: "Mengapa penting untuk rutin memantau tumbuh kembang anak?", options: ["Untuk mengetahui warna kesukaan anak", "Untuk mendeteksi dini masalah gizi dan pertumbuhan ", "Untuk menghitung jumlah mainan",], answer: 2 },
+            { question: "Peran keluarga dalam mencegah stunting sangat penting karena...", options: ["Keluarga bisa memilih baju anak", "Keluarga menentukan pola makan dan perawatan anak", "Anak tidak butuh bantuan"], answer: 2 },
+            { question: "Cara mengatasi picky eater yang benar adalah", options: ["Memarahi anak saat makan", "Memaksa anak makan banyak", "Memberikan contoh makan yang baik dan sabar"], answer: 3 },
+            { question: "Salah satu akibat jangka panjang dari picky eater adalah", options: ["Nafsu makan meningkat", "Berat badan cepat naik", "Kekurangan nutrisi penting"], answer: 3 },
+            { question: "Faktor penting dalam mencegah stunting adalah", options: ["Banyak menonton TV", "Asupan gizi yang baik dan cukup", "Tidur larut malam"], answer: 2 },
+            { question: "Cara memperkenalkan makanan baru ke anak adalah...", options: ["Memberi porsi besar langsung", "Memberikan dalam jumlah kecil dan sering ", "Tidak dikenalkan sama sekali"], answer: 2 },
+            { question: "Susu, telur, ikan, dan kacang-kacangan mengandung banyak", options: ["Gula", "Protein", "Garam"], answer: 2 },
+            { question: "Pola makan yang buruk bisa menyebabkan...", options: ["Masalah tumbuh kembang seperti stunting", "Anak jadi pintar", "Anak lebih kuat"], answer: 1 },
+            { question: "Apa yang dimaksud dengan makanan bergizi?", options: ["Makanan berwarna-warni", "Makanan yang mengandung zat gizi lengkap (karbohidrat, protein, vitamin, dll)", "Makanan manis"], answer: 2 }
         ];
 
         let currentQuestionIndex = 0;
@@ -236,7 +236,7 @@
             let correctCount = 0;
 
             questions.forEach((q, i) => {
-                if (userAnswers[i] === q.answer) correctCount++;
+                if (userAnswers[i] + 1 === q.answer) correctCount++;
             });
 
             const percentageScore = ((correctCount / questions.length) * 100).toFixed(0);
@@ -250,7 +250,7 @@
             resultSection.style.display = 'block';
 
             let msg = "";
-            if (correctCount === questions.length) msg = "SEMPURNA! 🎉 Anda benar-benar pakar gizi anak!";
+            if (correctCount === questions.length) msg = "SEMPURNA! 🎉";
             else if (correctCount >= 12) msg = "Luar biasa! Pengetahuan Anda sangat baik!";
             else if (correctCount >= 8) msg = "Bagus! Terus tingkatkan wawasan Anda!";
             else msg = "Jangan khawatir! Ini kesempatan untuk belajar lebih banyak!";
@@ -261,12 +261,16 @@
         document.addEventListener('DOMContentLoaded', () => {
             renderQuestions();
 
-            document.getElementById('quiz-carousel').addEventListener('slide.bs.carousel', (event) => {
+            document.getElementById('quiz-carousel').addEventListener('slid.bs.carousel', (event) => {
                 const newIndex = event.to;
+
+                // Update angka soal langsung
                 indicator.textContent = newIndex + 1;
 
-                setTimeout(updateNavigation, 150);
+                // Update button navigation
+                updateNavigation();
             });
+
         });
     </script>
 </body>
