--- a/quiz.html
+++ b/quiz.html
@@ -24,37 +24,108 @@
             width: 100%;
         }
 
-
         .quiz-container {
-            max-width: 700px;
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            margin: auto;
-            position: relative;
+            max-width: 750px;
+            background: white;
+            padding: 35px;
+            border-radius: 18px;
             margin-top: 80px;
+            box-shadow:
+                0 8px 20px rgba(0, 0, 0, 0.12),
+                0 3px 6px rgba(0, 0, 0, 0.05);
+            border: 1px solid #e7f5dc;
+            transition: transform .2s ease;
+            min-height: 500px; 
+        }
+
+        /* Style pertanyaan */
+        .quiz-container h5 {
+            font-weight: 700;
+            color: #2d4d1f;
+            text-align: center; /* Rata tengah teks pertanyaan */
+            margin-bottom: 25px !important;
+        }
+        
+        /* ---------------------------------------------------- */
+        /* Gaya untuk Opsi Jawaban (Box dan Centering) */
+        /* ---------------------------------------------------- */
+
+        .options-wrapper {
+            /* text-align: center; */ 
+        }
+
+        .form-check {
+            display: block; /* Agar opsi tetap atas-bawah */
+            margin: 0 auto 12px auto; /* Centering box secara horizontal */
+            max-width: 85%; /* Batasi lebar opsi agar tidak memenuhi container */
+            width: 100%; 
+        }
+
+        .form-check-input {
+            display: none; /* Sembunyikan radio button/bullet point */
         }
 
         .form-check-label {
-            cursor: pointer;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            border: 1px solid #dee2e6;
-            transition: background-color 0.2s;
-            display: block;
+            /* Gaya kotak jawaban */
+            background: #f8fbeff5;
+            padding: 15px 16px; 
+            border-radius: 12px;
+            border: 2px solid #dceccc;
+            transition: all .2s ease;
+            cursor: pointer; 
+            display: block; 
+            text-align: center; /* Rata tengah teks di dalam kotak opsi */
         }
 
         .form-check-input:checked+.form-check-label {
-            background-color: #d1e7dd;
-            border-color: #badc84;
+            background: #d7f4c3;
+            border-color: #9dd18c;
+            font-weight: 600;
         }
+
+        .form-check-label:hover {
+            background: #eef8e7;
+        }
+        
+        /* ---------------------------------------------------- */
 
         .carousel-control-prev,
         .carousel-control-next {
             display: none !important;
         }
+
+        /* Tombol navigasi */
+        #quiz-navigation button {
+            padding: 10px 26px;
+            font-size: 1.1rem;
+            border-radius: 10px;
+        }
+
+        .btn-primary {
+            background: #006838 !important;
+            border-color: #006838 !important;
+        }
+
+        .btn-primary:hover {
+            background: #00582f !important;
+        }
+
+        /* PERBAIKAN: Kode CSS Animasi telah dinonaktifkan */
+        /*
+        .fade-question {
+            animation: fadeIn .45s ease;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+        */
     </style>
 </head>
 
@@ -63,7 +134,6 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm py-2">
             <div class="container d-flex align-items-center">
 
-                <!-- Logo + Text Brand -->
                 <div class="d-flex align-items-center">
                     <img src="img/logo-djkn.png" alt="DJKN CARE Logo" height="70" class="me-0"
                         style="margin-right: 6px;">
@@ -74,7 +144,6 @@
                     </span>
                 </div>
 
-                <!-- Logo STIKES -->
                 <img src="img/logo-stikes.png" alt="Logo STIKES" height="55" class="ms-auto">
 
             </div>
@@ -88,9 +157,14 @@
                 ← Back
             </a>
 
-            <h2 class="text-center text-success mb-4">Uji Pengetahuan Anda!</h2>
+            <h2 class="text-center mb-4" style="color:#006838; font-weight:800; letter-spacing:1px;">
+                Uji Pengetahuan Anda! <span style="font-size:1.6rem;">🧠</span>
+            </h2>
 
-            <p class="text-center text-muted mb-4">Soal <span id="current-question">1</span> dari 15</p>
+
+            <div class="text-center text-muted mb-2">
+                Soal <span id="current-question">1</span> dari 15
+            </div>
 
             <div id="quiz-carousel" class="carousel slide" data-bs-interval="false">
                 <div class="carousel-inner" id="quiz-questions-container"></div>
@@ -111,6 +185,10 @@
                     <button class="btn btn-outline-primary mt-3" onclick="window.location.href='home.html'">
                         Kembali ke Beranda
                     </button>
+                    <button class="btn btn-success mt-3" onclick="restartQuiz()">
+                        Ulangi Quiz
+                    </button>
+
                 </div>
             </div>
         </div>
@@ -120,7 +198,7 @@
 
     <script>
         // ========================
-        // DATA SOAL
+        // DATA SOAL (TIDAK ADA PERUBAHAN)
         // ========================
         const questions = [
             { question: "Apa itu picky eater?", options: ["Anak yang suka pilih-pilih makanan", "Anak yang makan banyak", "Anak yang suka semua makanan"], answer: 1 },
@@ -143,6 +221,7 @@
         let currentQuestionIndex = 0;
         const userAnswers = new Array(questions.length).fill(null);
 
+        // Inisialisasi Carousel tanpa interval dan wrap
         const quizCarousel = new bootstrap.Carousel(document.getElementById('quiz-carousel'), {
             interval: false,
             wrap: false
@@ -186,9 +265,12 @@
                         </div>`;
                 });
 
+                // Wrapper untuk opsi jawaban
                 item.innerHTML = `
                     <h5 class="mb-4">Soal ${index + 1}: ${q.question}</h5>
-                    ${optionsHtml}
+                    <div class="options-wrapper">
+                        ${optionsHtml}
+                    </div>
                 `;
 
                 quizContainer.appendChild(item);
@@ -244,10 +326,9 @@
             document.getElementById('final-percentage-score').textContent = percentageScore + "%";
             document.getElementById('correct-count').textContent = correctCount;
 
-            quizContainer.style.display = 'none';
-            navContainer.style.display = 'none';
-            document.querySelector('.quiz-container > p').style.display = 'none';
-            resultSection.style.display = 'block';
+            quizContainer.style.display = "none";
+            navContainer.style.display = "none";
+            resultSection.style.display = "block";
 
             let msg = "";
             if (correctCount === questions.length) msg = "SEMPURNA! 🎉";
@@ -272,6 +353,35 @@
             });
 
         });
+
+        function restartQuiz() {
+            userAnswers.fill(null);
+            currentQuestionIndex = 0;
+
+            resultSection.style.display = "none";
+            quizContainer.style.display = "block";
+            navContainer.style.display = "block";
+
+            const quizText = document.querySelector('.quiz-container > p');
+            if (quizText) quizText.style.display = 'block';
+
+            renderQuestions();
+            quizCarousel.to(0);
+            updateNavigation();
+        }
+
+        /* PERBAIKAN: EVENT yang memicu animasi telah dihapus */
+        /*
+        document.getElementById('quiz-carousel').addEventListener('slid.bs.carousel', function () {
+            const active = document.querySelector(".carousel-item.active");
+            if (active) {
+                active.classList.add("fade-question");
+                setTimeout(() => active.classList.remove("fade-question"), 500);
+            }
+        });
+        */
+
+
     </script>
 </body>
 
